--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@testing-library/user-event": "^13.5.0",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
+    "eslint-plugin-jest-dom": "^4.0.2",
+    "eslint-plugin-testing-library": "^5.5.1",
+    "msw": "^0.42.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
